- ndelconss added to arguments for SCIPcleanupConssLinear() and SCIPcleanupConssKnapsack() to directly delete empty redundant constraints before creating problem matrix
- copyiisfinders added to arguments for SCIPcopyPlugins() (16th position)
- SCIPcreateConsOrbitope() deleted two arguments and changed position of another argument

### New API functions

- SCIPhistoryUpdateAncPseudocost(), SCIPvarUpdateAncPseudocost() for updating the ancestral pseudo cost fields in variable history
- SCIPhistoryGetAncPseudocost(), SCIPhistoryGetAncPseudocostCount(), SCIPhistoryIsAncPseudocostEmpty(), SCIPgetVarAncPseudocostVal(),
  SCIPvarGetAncPseudocost() for retrieving the values related to ancestral pseudo cost fields in variable history
- SCIPgetAvgDPseudocostScore(), SCIPgetVarDPseudocostScore() for computing the discounted pseudo cost scores using ancestral pseudo costs
- SCIPboundchgGetLPSolVal() for accessing the LP solution value in the branching data of the bound change
- SCIPclearSymgraph() and SCIPcopySymgraphAsSubgraph() to clear and copy as symmetry detection graph, respectively
- SCIPincludeSepaMultilinear() to include the new multilinear cut separator